--- a/final-backend/package.json
+++ b/final-backend/package.json
@@ -4,7 +4,7 @@
   "description": "PersonalBudget App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^6.9.2",
     "mongoose": "^5.11.4",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "jest": "^26.6.3"
   }
 }
